<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="174dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609">


        <EditText
            android:id="@+id/editText5"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_email" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:autofillHints="" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ainda_n_o_possui_uma_conta"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_personwhite"
        android:contentDescription="@string/imagem_de_usuario" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.326" />

</androidx.constraintlayout.widget.ConstraintLayout>